# shelljam

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ShellJamMain.cpp.14236AD90727BD14.idx  SpotifyAPI.cpp.4ED454EFA637D29A.idx  SpotifyAPI.hpp.61166055904732E4.idx
include/: SpotifyAPI.hpp
include/shelljam/: CurlUtil.hpp  ProjectPath.hpp.in  SpotifyAPI.hpp
src/: CMakeLists.txt  CurlUtil.cpp  ShellJamMain.cpp  SpotifyAPI.cpp
test/src/: CMakeLists.txt  CurlUtilTest.cpp  SpotifyAPITest.cpp
